2008-04-14  Marius Vollmer  <marius.vollmer@nokia.com>

	* Makefile.am (install-data-local, uninstall-local):
	Install/uninstall "notifier" file.

	* src/main.cc (create_toolbar): Enable refresh button also in blue
	pill mode (N83308).
	(enable_refresh): New.  Call it appropriately when constructing
	views.

2008-04-14  Mario Sanchez Prada  <msanchez@maemo.org>

	* utils/maemo-select-menu-location-main.c (dialog_exposed): Use
	gdk_window_raise instead of gdk_window_set_keep_above to avoid
	being on top of everything (no only the HAM) (N84021).

2008-04-11  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/update-notifier.c (expensive_connection): New.
	(check_for_updates): Use it to avoid checking when connected to a
	expensive connection (N84026).

2008-04-11  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/log.cc (save_log): Remove the "file://" prefix, if present,
	before storing the last_save_log_dir variable (N80933).

	* src/update-notifier-conf.h (UPNO_GCONF_URI): Removed.
	(UPNO_NOTIFIER_CONF): New define pointing to the new configuration
	file at /etc/hildon-application-manager/notifier.

	* src/update-notifier.c (get_notifier_uri): New function to easily
	retrieve the URI for checking new notifications.
	(check_for_notifications_thread): Stop using the GConf value for
	the URI and use the new function instead.
	(UPNO_GCONF_OLD_URI): New define pointinf to the former GConf path
	for the URI value.
	(load_state): Use the new UPNO_GCONF_OLD_URI to unset the variable
	from GConf if present.

	* src/hildon-application-manager-config.cc (read_conf): Read the
	new configuration file for the notifier.
	(reset_conf): Reset the new configuration file..
	(write_conf): Write the new configuration file.
	(handle_element): Handle the new configuration file, using a new
	function defined for comparison.
	(main): Also dump notifier configuration.

	* src/confutils.h (NOTIFIER_CONF): New define pointing to the new
	configuration file.
