@@ -1,7 +1,7 @@
 hildon-application-manager (1:2.1.9~unreleased) unstable; urgency=low
 
   * Fixes: NB#83547, NB#75393, NB#83764, NB#N83553, NB#83585, NB#80933.
-  * Fixes: NB#84026, NB#84021.
+  * Fixes: NB#84026, NB#84021, NB#84151.
 
  -- Marius Vollmer <marius.vollmer@nokia.com>  Thu, 03 Apr 2008 00:17:42 +0300
 
